apollo-federation/src/connectors/validation/snapshots/validation_tests@is_success__is_success_connect_happy_path.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/is_success/is_success_connect_happy_path.graphql
---
[]
