apollo-federation/src/connectors/validation/snapshots/validation_tests@is_success__is_success_invalid_connect.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/is_success/is_success_invalid_connect.graphql
---
[
    Message {
        code: InvalidIsSuccess,
        message: "In `@connect(isSuccess:)` on `Query.users`: $request is not valid here, must be one of $status, $response, $config, $env",
        locations: [
            21:19..21:76,
        ],
    },
]
